# slc-2026-software-development

./: .gitattributes  .gitignore
app/: app.go  main.go  wails.json
app/assets/: assets.go
app/audio/: loopback.go  loopback_windows.cpp  loopback_windows.go  loopback_windows.h
app/frontend/src/: app.tsx
data/: .gitignore
docs/adr/: ADR-0001-use-RAVDESS-over-IEMOCAP.md
model/: .gitignore  dataset_util.py  train.py
sentinel/: .gitignore  CMakeLists.txt  SETUP.md  conanfile.txt
sentinel/src/: main.cpp
tone/: .gitignore  IEMOCAP.md  SETUP.md  requirements.txt  train.py
tone/models/: combined.py  regressor.py
